Added Chart.js and mariadb compatibility

--- a/src/main/resources/dao.properties
+++ b/src/main/resources/dao.properties
@@ -1,38 +1,18 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/localdb?useSSL=false
-jdbc.username=appuser
-jdbc.password=Passw0rd!
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://192.168.1.226:3306/localdb
+#jdbc.username=appuser
+#jdbc.password=Passw0rd!
+#jdbc.username=supporto
+#jdbc.password=Passw0rd!
 
-jpa.showSql=false
-jpa.generateDdl=false
-jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#jpa.showSql=false
+#jpa.generateDdl=false
+#jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# === configurazione C3P0 ====
-# (cfr. http://www.mchange.com/projects/c3p0/)
 
-# initialPoolSize
-dbcp.initialSize=15
-# minPoolSize
-dbcp.minActive=9
-# maxPoolSize
-dbcp.maxActive=250
-# maxStatements
-dbcp.maxStatements=1000
 
-# idleTime=1h
-dbcp.maxIdleTime=3600
-# connAge = 20h
-dbcp.maxConnectionAge=72000
-#checktimeout=10min
-dbcp.checkoutTimeout=6000
-dbcp.acquireIncrement=5
-dbcp.acquireRetryAttempts=120
-
-# --- anagrafica ---
-dbcp.testConnectionOnCheckin=true
-dbcp.testConnectionOnCheckout=false
-# espresso in sec
-dbcp.idleConnectionTestPeriod=60
-
-hibernate.hbm2ddl.auto=
-hibernate.hbm2ddl.import_files=
+spring.datasource.url=jdbc:mariadb://localhost:3306/localdb
+spring.datasource.username=supporto
+spring.datasource.password=Passw0rd!
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=
