--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=
-jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/localdb
-spring.datasource.username=appuser
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=
+#jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/localdb
+#spring.datasource.username=appuser
+#spring.datasource.password=Passw0rd!
+
+spring.datasource.url=jdbc:mariadb://192.168.1.226:3306/localdb
+spring.datasource.username=supporto
 spring.datasource.password=Passw0rd!
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=
