--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>it.fanciullini</groupId>
     <artifactId>NetflixController</artifactId>
     <version>2.0.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
