Added status enum and change resizing layout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.username=supporto
 spring.datasource.password=Passw0rd!
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=
+
+payment.warning.threshold=31
