Added mail protocol, button and back/next button for payment list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=
 
 payment.warning.threshold=31
+
+
+smtp.config.host=smtp.gmail.com
+smtp.config.sender=netflix.arezzo@gmail.com
+smtp.config.password=BraskaVSTheWorld
+smtp.config.senderanag=Netflix Arezzo
+smtp.config.port=587
+smtp.dry.run=False
