--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=
 
 payment.warning.threshold=31
-
+notification.warning.threshold=12
 
 smtp.config.host=smtp.gmail.com
 smtp.config.sender=netflix.arezzo@gmail.com
@@ -21,3 +21,5 @@ smtp.config.password=BraskaVSTheWorld
 smtp.config.senderanag=Netflix Arezzo
 smtp.config.port=587
 smtp.dry.run=False
+
+telegram.bot.token=558377851:AAHCVXIq8VaWzhamShUhzSV5iEoNL9P0XUc
