--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 
 
     <build>
+        <finalName>NetflixController</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
