--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,20 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>8.5.23</version>
         </dependency>
+
+        <!--WebJars-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.0.0-2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <repositories>
