--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,3 @@
 spring.application.name=netflix-controller
 # N.B. this is the default:
-spring.cloud.config.uri=http://192.168.1.226:8888
-#spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://localhost:8888
